--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -39,6 +39,7 @@ rules:
   comma-style: 2
   computed-property-spacing: 2
   constructor-super: 2
+  default-case: 2
   eol-last: 2
   func-call-spacing: 2
   handle-callback-err: 2
